제목에 clone페이지라고 명시, 버튼 hover시 cursor가 pointer로 변하도록 수정

--- a/veamcamp/pricetable/index.html
+++ b/veamcamp/pricetable/index.html
@@ -16,7 +16,7 @@
     <li class="price-item">
       <div class="price-item-header">
         <h2>Free</h2>
-        <p>Basics for teams and developers</p>
+        <p>Basics for teams and developers (clone)</p>
       </div>
       <div class="price-item-content">
         <ul class="list">
