제목에 clone페이지라고 명시

--- a/veamcamp/pricetable/index.html
+++ b/veamcamp/pricetable/index.html
@@ -10,13 +10,13 @@
 <body>
 <div class="wrapper">
   <h1 class="title">
-    Plans for all developers
+    Plans for all developers (clone)
   </h1>
   <ul class="price">
     <li class="price-item">
       <div class="price-item-header">
         <h2>Free</h2>
-        <p>Basics for teams and developers (clone)</p>
+        <p>Basics for teams and developers</p>
       </div>
       <div class="price-item-content">
         <ul class="list">
